--- a/films-api/package.json
+++ b/films-api/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "swagger-ui-express": "^4.6.0"
   }
