--- a/films-api/package.json
+++ b/films-api/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mariadb": "^3.0.2",
     "swagger-ui-express": "^4.6.0"
   }
 }
