--- a/films-api/package.json
+++ b/films-api/package.json
@@ -1,7 +1,6 @@
 {
   "name": "films-api",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,6 +11,11 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mariadb": "^3.0.2",
     "swagger-ui-express": "^4.6.0"
-  }
+  },
+  "directories": {
+    "doc": "docs"
+  },
+  "description": ""
 }
