--- a/films-api/package.json
+++ b/films-api/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx nodemon ."
+  },
+  "nodemonConfig": {
+    "ext":"js,json,yaml"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +16,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mariadb": "^3.0.2",
+    "nodemon": "^2.0.20",
     "sequelize": "^6.28.0",
     "swagger-ui-express": "^4.6.0"
   },
