--- a/films-api/package.json
+++ b/films-api/package.json
@@ -7,12 +7,13 @@
     "start": "npx nodemon ."
   },
   "nodemonConfig": {
-    "ext":"js,json,yaml"
+    "ext": "js,json,yaml"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mariadb": "^3.0.2",
